# specbl1z

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  ARCHITECT.md  CHANGELOG.md  CI_CD_STRATEGY.md  Cargo.toml  GEMINI.md  LICENSE  PLAN.md  README.md  SPEC.md  TODO.md  fast_import.py  import_skills.sh  test-output.yaml
.github/workflows/: anti-slop.md  auto-doc.md  dead-code-hunter.md  security-audit.md
app/: .editorconfig  .gitattributes  .gitignore  biome.json  bl1nk.ts  generate-proto.sh  package-lock.json  package.json  tsconfig.json  tsup.config.ts
app/src/: craft_tools.ts  db.ts  mcp.ts  schema.sql  server.ts
cli/: Cargo.toml
cli/src/: main.rs
conductor/: index.md  plan-add-craft-mcp-tools.md  product.md  tracks.md
core/: Cargo.toml  build.rs  schema.sql
core/migrations/: 001_initial_schema.sql  002_specgen_v2_memory_policy.sql
core/src/: db.rs  distiller.rs  integration_test.rs  lib.rs  memory.rs  models.rs  renderer.rs  rules_engine.rs  schema.rs  sense.rs  sync.rs  task_delegator.rs  validator.rs
core/src/parser/: markdown.rs  mod.rs  toml.rs
core/tests/: integration.rs
craft/: Cargo.toml  README.md  schema.sql
craft/src/: db.rs  lib.rs  main.rs  markdown.rs
model/: DEPLOY.md  opencode.py  todo.md
model/conductor/: index.md  modal.md  modal_deployment.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
model/engine/: Cargo.toml
model/tests/: test_opencode.py
schema/: bl1nk.proto  template_schema.json
scripts/: distiller_logic.py  safeguard.sh  seed_skills.py
templates/: spec-workflow.json  spec-workflow.md  spec-workflow.toml  test_null_field.toml
tools/triage/: todo.md  (+10 more)
(+28 files in other folders)
