[package]
name = "craft-local-db"
version = "0.1.0"
edition = "2021"
description = "Local Craft-like SQLite database with Markdown import"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.10"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
